--- a/helm-chart/templates/frontend.yaml
+++ b/helm-chart/templates/frontend.yaml
@@ -27,6 +27,7 @@ spec:
       labels:
         app: {{ .Values.frontend.name }}
       annotations:
+        instrumentation.opentelemetry.io/inject-go: "true"
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
       {{- if .Values.serviceAccounts.create }}
