--- a/helm-chart/templates/currencyservice.yaml
+++ b/helm-chart/templates/currencyservice.yaml
@@ -24,6 +24,8 @@ spec:
       app: {{ .Values.currencyService.name }}
   template:
     metadata:
+      annotations:
+        instrumentation.opentelemetry.io/inject-nodejs: "true"
       labels:
         app: {{ .Values.currencyService.name }}
     spec:
