--- a/helm-chart/templates/emailservice.yaml
+++ b/helm-chart/templates/emailservice.yaml
@@ -24,6 +24,8 @@ spec:
       app: {{ .Values.emailService.name }}
   template:
     metadata:
+      annotations:
+        instrumentation.opentelemetry.io/inject-python: "true"
       labels:
         app: {{ .Values.emailService.name }}
     spec:
