--- a/helm-chart/templates/productcatalogservice.yaml
+++ b/helm-chart/templates/productcatalogservice.yaml
@@ -24,6 +24,8 @@ spec:
       app: {{ .Values.productCatalogService.name }}
   template:
     metadata:
+      annotations:
+        instrumentation.opentelemetry.io/inject-go: "true"
       labels:
         app: {{ .Values.productCatalogService.name }}
     spec:
