Add support for go otel

--- a/helm-chart/templates/frontend.yaml
+++ b/helm-chart/templates/frontend.yaml
@@ -28,6 +28,7 @@ spec:
         app: {{ .Values.frontend.name }}
       annotations:
         instrumentation.opentelemetry.io/inject-go: "true"
+        instrumentation.opentelemetry.io/otel-go-auto-target-exe: '/src/server'
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
       {{- if .Values.serviceAccounts.create }}
