--- a/helm-chart/templates/productcatalogservice.yaml
+++ b/helm-chart/templates/productcatalogservice.yaml
@@ -26,6 +26,7 @@ spec:
     metadata:
       annotations:
         instrumentation.opentelemetry.io/inject-go: "true"
+        instrumentation.opentelemetry.io/otel-go-auto-target-exe: '/src/server'
       labels:
         app: {{ .Values.productCatalogService.name }}
     spec:
